--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,5 @@ root = true
 indent_size = 4
 indent_style = space
 trim_trailing_whitespace = true
+insert_final_newline = true
+max_line_length = 250
